# Merciless-Pepper-of-Quetzalacatenango

./: LICENSE  README
cosd/: .gitignore  CMakeLists.txt  cosd.c  leveldb.cmake  util.c
cosd/Debug/: .gitignore
cosd/Release/: .gitignore
cskvs/: CMakeLists.txt  config.h  cskvb.c  cskvs.c  leveldb.cmake  util.c  util.h
cskvs/Debug/: .gitignore  b
cskvs/Release/: .gitignore  b
urlshortd/: .gitignore  CMakeLists.txt  GettextTranslate.cmake  LICENSE  Makevars  POTFILES.in  README.md  genpo.sh  mod_leveldb.c  mod_mysql.c  mod_postgres.c  mod_sqlite.c  mysql.cmake  postgresql.cmake  tmpldfl.h  urlshortd.c  util.c  util.h
urlshortd/Debug/: .gitignore  b
urlshortd/conf/: mysql.conf.sample
urlshortd/templates/: error  index  list  new  status
