PROJECT(cosd)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(cosd_VERSION_MAJOR "0")
SET(cosd_VERSION_MINOR "0")
SET(cosd_VERSION_REV "1")

SET(CPACK_PACKAGE_VERSION "${cosd_VERSION_MAJOR}.${cosd_VERSION_MINOR}.${cosd_VERSION_REV}")
ADD_DEFINITIONS( -Dcosd_VERSION_MAJOR=${cosd_VERSION_MAJOR} -Dcosd_VERSION_MINOR=${cosd_VERSION_MINOR} -Dcosd_VERSION_REV=${cosd_VERSION_REV})


SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

INCLUDE(leveldb.cmake)

INCLUDE_DIRECTORIES(${LEVELDB_INCLUDE_DIR})
# INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
ADD_EXECUTABLE(cosd cosd.c util.c util.h mongoose.c mongoose.h)
TARGET_LINK_LIBRARIES(cosd pthread dl leveldb)

INSTALL(TARGETS cosd DESTINATION cosd)

SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dave DeMaagd")
SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "libsqlite3-dev (>=3.7.14.1-1), libmysqlclient-dev (>=5.5.24+dfsg-9)")

INCLUDE(CPack)
