PROJECT(urlshortd)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(urlshortd_VERSION_MAJOR "0")
SET(urlshortd_VERSION_MINOR "0")
SET(urlshortd_VERSION_REV "5")

SET(CPACK_PACKAGE_VERSION "${urlshortd_VERSION_MAJOR}.${urlshortd_VERSION_MINOR}.${urlshortd_VERSION_REV}")
ADD_DEFINITIONS( -Durlshortd_VERSION_MAJOR=${urlshortd_VERSION_MAJOR} -Durlshortd_VERSION_MINOR=${urlshortd_VERSION_MINOR} -Durlshortd_VERSION_REV=${urlshortd_VERSION_REV})

SET(GettextTranslate_ALL "1")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

SET(LOCALEDIR "/usr/share/locale/")

INCLUDE(mysql.cmake)
INCLUDE(postgresql.cmake)
INCLUDE(leveldb.cmake)
INCLUDE(GettextTranslate.cmake)

FIND_PACKAGE (PkgConfig REQUIRED)
PKG_CHECK_MODULES(SQLITE3 sqlite3)
PKG_CHECK_MODULES(JSON json)

IF(SQLITE3_FOUND)
  INCLUDE_DIRECTORIES(${SQLITE3_INCLUDE_DIRS})
	ADD_LIBRARY(mod_sqlite SHARED mod_sqlite.c util.c util.h)
	TARGET_LINK_LIBRARIES(mod_sqlite ${SQLITE3_LIBRARIES})
ENDIF(SQLITE3_FOUND)

IF(MYSQL_FOUND AND JSON_FOUND)
  INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIR})
	add_library(mod_mysql SHARED mod_mysql.c util.c util.h)
	target_link_libraries(mod_mysql ${MYSQL_LIBRARY} ${JSON_LIBRARIES})
endif(MYSQL_FOUND AND JSON_FOUND)

IF(POSTGRESQL_FOUND AND JSON_FOUND)
  INCLUDE_DIRECTORIES(${POSTGRESQL_INCLUDE_DIR})
	ADD_LIBRARY(mod_postgres SHARED mod_postgres.c util.c util.h)
	TARGET_LINK_LIBRARIES(mod_postgres ${POSTGRESQL_LIBRARIES} ${JSON_LIBRARIES})
ENDIF(POSTGRESQL_FOUND AND JSON_FOUND)

IF(LEVELDB_FOUND)
  INCLUDE_DIRECTORIES(${LEVELDB_INCLUDE_DIR})
	ADD_LIBRARY(mod_leveldb SHARED mod_leveldb.c util.c util.h)
	TARGET_LINK_LIBRARIES(mod_leveldb ${LEVELDB_LIBRARIES})
ENDIF(LEVELDB_FOUND)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
ADD_EXECUTABLE(urlshortd urlshortd.c util.c util.h tmpldfl.h mongoose.c mongoose.h)
TARGET_LINK_LIBRARIES(urlshortd dl pthread)

INSTALL(TARGETS urlshortd DESTINATION urlshortd)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dave DeMaagd")
SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "libsqlite3-dev (>=3.7.14.1-1), libmysqlclient-dev (>=5.5.24+dfsg-9)")

GettextTranslate()

INCLUDE(CPack)
